[package]
name = "weeqwest"
version = "0.1.0"
authors = ["Ben Kimock <kimockb@gmail.com>"]
edition = "2018"

[dependencies]
httparse = "1.0"
http = "0.2"
libflate = "0.1"
lazy_static = "1.0"
rustls = {version = "0.16", default-features = false}
webpki = "0.21"
webpki-roots = "0.18"
mio = {version = "0.6", default-features = false}
futures = "0.1"
